[B][COLOR red]Update - v3.5.3 - March 16, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Google api for trailer search now checks if user entered
    own key in youtube addon.  That key will now take
    priority.[/I]
[COLOR yellow]--[/COLOR][I] Added torrent cache checking, and removal settings,
    for RD and PM. The new settings are found under
    "Torrent Settings" and are enabled by default to
    cache check and remove uncached torrents.[/I]
[COLOR yellow]--[/COLOR][I] Added setting to not log removed duplicate sources.
    Logging the removed duplicates was causing
    excessive log spamming.[/I]

[B][COLOR red]Update - v3.5.2 - Feb. 22, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Trailer module updated with new api keys to fix google
    search of youtube for trailers[/I]
[COLOR yellow]--[/COLOR][I] Changed how restarting a previousely watched movie
    or episode is handled. Previousely the title would be
    marked unwatched upon replaying a previousely
    watched item. Now the watched indicator is not
    changed.[/I]
[COLOR yellow]--[/COLOR][I] Added ability to pass to skin resume points.  This now
    allows for skin to use a watched progress indicator.[/I]
[COLOR yellow]--[/COLOR][I] Added TMDB Box Office to Movie Menu and
    setting page option to remove item from navigation.[/I]

[B][COLOR red]Update - v3.5.1 - Feb. 8, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Scraper function cache now written to the providers.db
    instead of cache.db.  Now using "Clear Providers" will
    wipe both links and function cache with no need to use
    "Clear cache". This will help preserve meta data.[/I]
[COLOR yellow]--[/COLOR][I] Updated "context.venom" addon to now include the
    following new global context options as follows.
    "Clear Providers"
    "Find Similar"
    "Browse Series"
    "Browse Episodes"[/I]

[B][COLOR red]Update - v3.5.0 - Feb. 6, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Updated userdata settings.xml cleaner tool to be