@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.5.3" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.5.4" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,17 +38,13 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.5.3 - March 16, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Google api for trailer search now checks if user entered
-    own key in youtube addon.  That key will now take
-    priority.[/I]
-[COLOR yellow]--[/COLOR][I] Added torrent cache checking, and removal settings,
-    for RD and PM. The new settings are found under
-    "Torrent Settings" and are enabled by default to
-    cache check and remove uncached torrents.[/I]
-[COLOR yellow]--[/COLOR][I] Added setting to not log removed duplicate sources.
-    Logging the removed duplicates was causing
-    excessive log spamming.[/I]
+[B][COLOR red]Update - v3.5.4 - March 18, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Added setting option for torrent secondary line to
+    display as std info or magnet title.  Note this is skin
+    dependent so secondary info line lengthens and
+    should be tested with your skin of choice.  The
+    new setting is under Source Options-Secondary
+    Line Torrent content.[/I]
 		</news>
 	</extension>
 </addon>
